--- a/Faveo Helpdesk Pro/TicketTableViewCell.xib
+++ b/Faveo Helpdesk Pro/TicketTableViewCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -13,25 +13,25 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableViewCellID" rowHeight="94" id="CDu-xs-ap0" customClass="TicketTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="354" height="94"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="TableViewCellID" rowHeight="105" id="CDu-xs-ap0" customClass="TicketTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="354" height="105"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="CDu-xs-ap0" id="AdS-ZM-UfM">
-                <rect key="frame" x="0.0" y="0.0" width="354" height="93.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="354" height="104.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hCG-1y-fMS">
-                        <rect key="frame" x="0.0" y="0.0" width="354" height="94"/>
+                        <rect key="frame" x="0.0" y="0.0" width="354" height="104.5"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vGf-8H-ojp">
-                                <rect key="frame" x="344" y="0.0" width="10" height="94"/>
+                                <rect key="frame" x="344" y="0.0" width="10" height="104.5"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="10" id="G1x-9w-O3r"/>
                                 </constraints>
                             </view>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Labelwiosiniedwql;delow;ds;nlcsnckldsncxncknzxkcndkncksdncnkdsnckdsncwsdadadbajdbsajdbsjad bjsdbu" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LPv-Px-QNx">
-                                <rect key="frame" x="65" y="25" width="270" height="44"/>
+                                <rect key="frame" x="65" y="25" width="270" height="54.5"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="11"/>
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
@@ -43,7 +43,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="admin@gmail.com" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1m9-rL-BBc">
-                                <rect key="frame" x="78" y="73" width="107.5" height="18"/>
+                                <rect key="frame" x="78" y="83.5" width="107.5" height="18"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="18" id="SuC-Ab-ThB"/>
                                 </constraints>
@@ -52,7 +52,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" restorationIdentifier="TableViewCellID" image="default_pic" translatesAutoresizingMaskIntoConstraints="NO" id="53O-dF-h8M">
-                                <rect key="frame" x="8" y="22" width="50" height="50"/>
+                                <rect key="frame" x="8" y="30.5" width="50" height="50"/>
                                 <color key="backgroundColor" red="0.40000000600000002" green="0.80000001190000003" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="50" id="Omu-RF-jJ7"/>
@@ -69,7 +69,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Overdue" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fsr-d5-eO6">
-                                <rect key="frame" x="276" y="70" width="66" height="21"/>
+                                <rect key="frame" x="276" y="80.5" width="66" height="21"/>
                                 <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="Dpp-pe-r3n"/>
@@ -86,7 +86,7 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Due Today" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="poj-f2-dFs">
-                                <rect key="frame" x="275.5" y="70" width="66" height="21"/>
+                                <rect key="frame" x="275.5" y="80.5" width="66" height="21"/>
                                 <color key="backgroundColor" red="1" green="0.95077534707453004" blue="0.58851132072213463" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
                                 <nil key="highlightedColor"/>
@@ -110,16 +110,16 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="owner" translatesAutoresizingMaskIntoConstraints="NO" id="siu-XN-GBs">
-                                <rect key="frame" x="63" y="75" width="13" height="12"/>
+                                <rect key="frame" x="63" y="85.5" width="13" height="12"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="headfone" translatesAutoresizingMaskIntoConstraints="NO" id="uFH-Uu-d7J">
-                                <rect key="frame" x="173.5" y="76" width="11" height="11"/>
+                                <rect key="frame" x="173.5" y="86.5" width="11" height="11"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="11" id="7ab-pe-dew"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Mallikarjun" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="beW-RO-yLo">
-                                <rect key="frame" x="186.5" y="73" width="80" height="18"/>
+                                <rect key="frame" x="186.5" y="83.5" width="80" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="9"/>
                                 <color key="textColor" cocoaTouchSystemColor="viewFlipsideBackgroundColor"/>
                                 <nil key="highlightedColor"/>
@@ -133,7 +133,7 @@
                             <constraint firstItem="XGS-gO-zvq" firstAttribute="trailing" secondItem="1m9-rL-BBc" secondAttribute="trailing" constant="152" id="5bO-e8-4wx"/>
                             <constraint firstItem="LPv-Px-QNx" firstAttribute="leading" secondItem="1m9-rL-BBc" secondAttribute="leading" constant="-13" id="6FF-wJ-eFc"/>
                             <constraint firstItem="poj-f2-dFs" firstAttribute="baseline" secondItem="fsr-d5-eO6" secondAttribute="baseline" id="7BP-kY-Zr0"/>
-                            <constraint firstItem="53O-dF-h8M" firstAttribute="centerY" secondItem="LPv-Px-QNx" secondAttribute="centerY" id="8Ts-4q-Ye9"/>
+                            <constraint firstItem="53O-dF-h8M" firstAttribute="centerY" secondItem="LPv-Px-QNx" secondAttribute="centerY" constant="3.25" id="8Ts-4q-Ye9"/>
                             <constraint firstItem="XGS-gO-zvq" firstAttribute="trailing" secondItem="hCG-1y-fMS" secondAttribute="trailingMargin" constant="-8" id="ADo-mf-Ocg"/>
                             <constraint firstItem="poj-f2-dFs" firstAttribute="leading" secondItem="fsr-d5-eO6" secondAttribute="leading" constant="-0.5" id="CG3-yZ-Rhh"/>
                             <constraint firstItem="beW-RO-yLo" firstAttribute="leading" secondItem="uFH-Uu-d7J" secondAttribute="trailing" constant="2" id="F0u-p8-VJi"/>
@@ -159,7 +159,7 @@
                             <constraint firstItem="Ckd-Id-tc5" firstAttribute="leading" secondItem="LPv-Px-QNx" secondAttribute="leading" id="ntY-Oq-wxl"/>
                             <constraint firstItem="LPv-Px-QNx" firstAttribute="top" secondItem="Ckd-Id-tc5" secondAttribute="bottom" constant="-3" id="pAj-e5-p4F"/>
                             <constraint firstItem="beW-RO-yLo" firstAttribute="firstBaseline" secondItem="1m9-rL-BBc" secondAttribute="firstBaseline" id="q9V-2h-WXE"/>
-                            <constraint firstItem="53O-dF-h8M" firstAttribute="centerY" secondItem="hCG-1y-fMS" secondAttribute="centerY" id="r47-Cr-pLN"/>
+                            <constraint firstItem="53O-dF-h8M" firstAttribute="centerY" secondItem="hCG-1y-fMS" secondAttribute="centerY" constant="3.25" id="r47-Cr-pLN"/>
                             <constraint firstItem="uFH-Uu-d7J" firstAttribute="leading" secondItem="1m9-rL-BBc" secondAttribute="trailing" constant="-12" id="xHG-OH-VUX"/>
                             <constraint firstItem="fsr-d5-eO6" firstAttribute="leading" secondItem="beW-RO-yLo" secondAttribute="trailing" constant="9.5" id="yV5-mb-iz6"/>
                             <constraint firstItem="fsr-d5-eO6" firstAttribute="top" secondItem="1m9-rL-BBc" secondAttribute="top" constant="-3" id="zJc-wL-j8n"/>
@@ -223,7 +223,7 @@
         </label>
     </objects>
     <resources>
-        <image name="default_pic" width="96" height="96"/>
+        <image name="default_pic" width="512" height="512"/>
         <image name="headfone" width="512" height="512"/>
         <image name="owner" width="512" height="512"/>
     </resources>
